--- a/Common/src/grid_movement/meson.build
+++ b/Common/src/grid_movement/meson.build
@@ -6,6 +6,6 @@ common_src += files(['CGridMovement.cpp',
                      'CVolumetricMovement.cpp',
                      'CSurfaceMovement.cpp',
                      'CVolumetricMovementFactory.cpp',
-                     'ClinearElasticity.cpp',
+                     'CLinearElasticity.cpp',
                      'CRadialBasisFunctionInterpolation.cpp',
                      'CRadialBasisFunctionNode.cpp'])
